EKS-project/amazon-elastic-kubernetes-service-course-main/eks/weather.yaml
####################################################################
# Resources:
#   - Namespace: weather (placed for clarity, not strictly needed since it should be created eariler)
#   - ServiceAccount: weather-fetcher (for CronJob ConfigMap write)
#   - ServiceAccount: weather-app (for Flask pod ConfigMap read)
#   - Role + RoleBindings: ConfigMap read/write permissions
#   - CronJob: fetches weather every 10 minutes from open meteo api -> writes ConfigMap
#   - Deployment: Flask app serving the UI
#   - Service: ClusterIP
#   - Ingress: ALB internet-facing
####################################################################

####################################################################
# Namespace, not needed but just in case
####################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: weather
  labels:
    app.kubernetes.io/managed-by: kubectl
---
####################################################################
# Deployment — Flask serving pod
####################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: weather
  labels:
    app: weather-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      serviceAccountName: weather-app
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: weather-app
                topologyKey: kubernetes.io/hostname

      containers:
        - name: weather-app
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          image: igior/weather-app:1.3
          ports:
            - containerPort: 8080
              name: http

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
####################################################################
# Service
####################################################################
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: weather
  labels:
    app: weather-app
spec:
  type: ClusterIP
  selector:
    app: weather-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
####################################################################
# Ingress — ALB internet-facing
####################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app
  namespace: weather
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/tags: Environment=demo,ManagedBy=eks-alb-controller,App=weather
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-app
                port:
                  number: 80
